# cross-compile-thing

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.c
cmake/: arm-none-eabi.cmake
